# dang

./: .gitmodules  Cargo.toml  Makefile.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  jpdb-release.yml
dang/: Cargo.toml
dang/src/: cli.rs  convert.rs  gdb.rs  lib.rs  main.rs  runtime.rs  waveloader.rs
docs/: README.md  book.toml  installation.md  signal-mapping.md  usage.md
docs/src/: SUMMARY.md  basic-usage.md  examples.md  getting-started.md  installation.md  introduction.md
docs/src/advanced/: gdb-protocol.md  signal-mapping.md
docs/src/architecture/: dang-core.md  jpdb.md  overview.md  shucks.md  waveform-loading.md
docs/src/development/: contributing.md
docs/src/reference/: cli.md  troubleshooting.md
jpdb/: Cargo.toml
jpdb/src/: cli.rs  controller.rs  main.rs  model.rs  user_commands.rs  view.rs  wcp_client.rs
shucks/: Cargo.toml
shucks/src/: addr2line_stepper.rs  client.rs  commands.rs  lib.rs  main.rs  packet.rs  response.rs  wavetracker.rs
src/: cli.rs  convert.rs  gdb.rs  main.rs  runtime.rs  waveloader.rs
test_data/ibex/: hello_test.elf  signal_get.py  sim.fst
