[workspace]
resolver = "2"
members = ["dang", "shucks", "jpdb"]
default-members = ["dang"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.73.0"
authors = ["James Connolly <jimmy@1024bees.com>"]
description = "GDB for pre-silicon "
repository = "https://github.com/1024bees/dang"
keywords = ["vcd", "fst", "waveform", "wavedump"]
license = "MIT"

[workspace.dependencies]
gdbstub = "0.7.6"
gdbstub_arch = "0.3.0"
log = "0.4.22"
env_logger = "0.11.6"

[profile.release]
debug = true
