[workspace]
resolver = "2"
members = ["dang", "shucks", "jpdb"]
default-members = ["jpdb"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"
authors = ["J Porkchop <jimmy@1024bees.com>"]
description = "GDB for pre-silicon CPUs"
repository = "https://github.com/1024bees/dang"
keywords = ["vcd", "fst", "waveform", "wavedump", "gdb"]
license = "MIT"

[workspace.dependencies]
gdbstub = "0.7.6"
gdbstub_arch = "0.3.0"
log = "0.4.22"
env_logger = "0.11.6"
raki = "1.3.2"
wellen = { git = "https://github.com/1024bees/wellen.git", branch = "signal-builders" }
pywellen = { git = "https://github.com/1024bees/wellen.git", branch = "signal-builders" }
anyhow = "1"
object = "0.36"
addr2line = "0.24"
argh = "0.1"

[profile.release]
debug = true

[profile.test]
# Suppress output during tests by default
opt-level = 0
debug = true
