[package]
name = "dang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
gdbstub = { workspace=true}
gdbstub_arch = { workspace = true}
wellen = { git = "https://github.com/1024bees/wellen.git",branch="signal-builders"}
pywellen = { git= "https://github.com/1024bees/wellen.git",branch="signal-builders"}


num-bigint = "0.4.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
argh = "0.1.12"

pyo3 = { version = "0.21.1", features = ["num-bigint", "abi3-py310"] }
log = "0.4.22"
env_logger = "0.11.6"
goblin = "0.9.3"


[build-dependencies]
cc = "1.0"
num_cpus = "1.15"
glob = "0.3"
