[package]
name = "dang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
gdbstub = { workspace = true }
gdbstub_arch = { workspace = true }
wellen = { workspace = true }
pywellen = { workspace = true }


num-bigint = "0.4.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
argh = "0.1.12"

pyo3 = { version = "0.21.1", features = ["num-bigint", "abi3-py310"] }
log = { workspace = true }
env_logger = { workspace = true }
goblin = "0.9.3"


[build-dependencies]
cc = "1.0"
num_cpus = "1.15"
glob = "0.3"
