[package]
name = "jpdb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "TUI debugger frontend"
repository.workspace = true
license.workspace = true

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
shucks = { path = "../shucks" }
dang = { path = "../dang" }
log = { workspace = true }
env_logger = { workspace = true }
serde_json = "1.0"
libsurfer = { git = "https://gitlab.com/surfer-project/surfer" }
