[package]
name = "shucks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
gdbstub = { workspace = true }
gdbstub_arch = { workspace = true }
goblin = "0.10"
raki = "1.3.2"
log = { workspace = true }

[dev-dependencies]
dang = { path = "../dang" }
