[package]
name = "shucks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
gdbstub = { workspace = true }
gdbstub_arch = { workspace = true }
raki = { workspace = true }
wellen = { workspace = true }
goblin = "0.10"
anyhow = { workspace = true }
object = { workspace = true }
addr2line = { workspace = true }

dang = { path = "../dang" }

gimli = "0.31"

log = { workspace = true }

env_logger = { workspace = true }
nucleo-matcher = "0.3.1"
